# RimR

./: .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Cargo.toml  README.md  README.zh.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  vite.config.ts  vitest.config.ts
crates/rimr-core/: Cargo.toml
crates/rimr-core/src/: error.rs  lib.rs
crates/rimr-core/src/app/: mod.rs
crates/rimr-core/src/diagnostics/: code.rs  diagnostic.rs  mod.rs  severity.rs
crates/rimr-core/src/domain/: active_order.rs  catalog.rs  dependency.rs  game_version.rs  library.rs  mod.rs  mod_metadata.rs  package_id.rs
crates/rimr-core/src/formats/: mod.rs  xml.rs
crates/rimr-core/src/formats/about/: by_version.rs  compile.rs  error.rs  mod.rs  parser.rs  raw.rs
crates/rimr-core/src/formats/game_config/: mod.rs  read.rs  write.rs
crates/rimr-core/src/formats/portable/: export.rs  import.rs  mod.rs  schema.rs
crates/rimr-core/src/formats/save_game/: mod.rs  read.rs
crates/rimr-core/src/ports/: clock.rs  library_store.rs  mod.rs  mod_repository.rs
crates/rimr-core/src/rules/: build.rs  graph.rs  mod.rs  validate.rs
crates/rimr-core/src/rules/checks/: cycles.rs  dependencies.rs  duplicates.rs  incompatibilities.rs  mod.rs  order.rs
crates/rimr-core/src/services/: export_backup.rs  library.rs  load_active.rs  mod.rs  save_active.rs  scan.rs  test_support.rs  validate_order.rs
crates/rimr-core/tests/: app_architecture.rs  integration.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  error.rs  fs_utils.rs  lib.rs  library_store.rs  logging.rs  main.rs  mod_file_info.rs  paths.rs  player_log.rs  source.rs  state.rs
src-tauri/src/commands/: backups.rs  config.rs  logs.rs  mod.rs  mod_lists.rs  mods.rs  saves.rs
src-tauri/src/dto/: backups_conv.rs  mod.rs  mod_lists_conv.rs  mods_conv.rs
src-tauri/tests/: config_paths_source.rs  paths.rs  state_workflows.rs
(+241 files in other folders)
