[package]
name = "rimr-core"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
quick-xml = { version = "0.39", features = ["encoding"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
async-trait = "0.1"
flate2 = "1"
thiserror = "2"
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
zstd = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
